Remove Android SDK files.
As with iOS, these will need to be downloaded and installed manually.

--- a/.gitignore
+++ b/.gitignore
@@ -92,4 +92,4 @@ sdk/*.zip
 ios/MobileRTC.framework
 ios/MobileRTCResources.bundle
 ios/MobileRTCScreenShare.framework
-android/libs/mobilertc/mobilertc.aar
+android/libs
