Update to run with latest versions of Zoom SDK.
- iOS: 5.7.6.1076
- Android: 5.7.6.1915

--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,8 @@
 # Zoom SDK
 sdk/*.zip
 ios/MobileRTC.framework
+ios/MobileRTC.xcframework
 ios/MobileRTCResources.bundle
 ios/MobileRTCScreenShare.framework
+ios/MobileRTCScreenShare.xcframework
 android/libs
