Updated to work with Zoom SDK 5.15.
Implements the new JWT based authentication scheme and removes
support for the old app key/app secret authentication scheme.

--- a/.gitignore
+++ b/.gitignore
@@ -94,4 +94,5 @@ ios/MobileRTC.xcframework
 ios/MobileRTCResources.bundle
 ios/MobileRTCScreenShare.framework
 ios/MobileRTCScreenShare.xcframework
+ios/zoomcml.xcframework
 android/libs
